# execq

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
include/execq/: ExecutionPool.h  ExecutionQueueSource.h  IExecutionQueue.h  IExecutionStream.h  execq.h
include/execq/internal/: CancelTokenProvider.h  ExecqUtils.h  ExecutionPool.h  ExecutionPoolUtils.h  ExecutionQueue.h  ExecutionStream.h  ITaskProvider.h  TaskProviderGroup.h  TaskProviderList.h  TaskProviderUtils.h  ThreadWorker.h  ThreadWorkerPool.h  execq_private.h
src/: CancelTokenProvider.cpp  ExecqUtils.cpp  ExecutionPool.cpp  ExecutionStream.cpp  TaskProviderGroup.cpp  TaskProviderList.cpp  TaskProviderUtils.cpp  ThreadWorker.cpp  ThreadWorkerPool.cpp  execq.cpp
tests/: CancelTokenProviderTest.cpp  ExecqTestUtil.h  ExecutionQueueTest.cpp  ExecutionStreamTest.cpp  TaskExecutionQueueTest.cpp  TaskProviderGroupTest.cpp  TaskProviderListTest.cpp  Tests.cpp
